--- a/templates/uploaded.html
+++ b/templates/uploaded.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <title>Upload new File</title>
 <h1>Upload new File</h1>
+<h3>Upload here two forms files with the keyword "Nom" to have the similarities and matchings between two groups of respondents</h2>
 <form method=post enctype=multipart/form-data>
-  <p><input type=file name=file> Liste 1
-    <input type  =file name=file2> liste 2
+  <p><input type=file name=file> First half of respondents
+    <input type  =file name=file2> Second half of respondents
      <input type=submit value=Upload>
 </form>
+
+<p>If you want similarities among the same set, upload twice the same file.</p>
+
+<p>If you want to teach me CSS, alcalleb@microsoft.com is my email</p>
 
